# should-release-action

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  action.yml
.github/: codecov.yml
.github/workflows/: code-coverage.yml  conventional-label.yml  pr-title-checker.yml  pr.yml  publish.yml  test-build.yml
docker/: Dockerfile
scripts/: coverage.sh  dockerbuild.sh
src/: main.rs
