[package]
name = "should-release"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "should-release"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
fs = "0.0.5"
regex = "1.10.3"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.113"
toml = "0.5.11"
version-compare = "0.1.1"

[dev-dependencies]
tempfile = "3.10.0"
